# libstb-secvar

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: tests.yml
include/: config.h  libstb-secvar-errors.h  libstb-secvar.h  log.h  phyp.h
include/secvar/: authentication_2.h  crypto.h  crypto_util.h  esl.h  pseries.h  util.h
src/: authentication_2.c  crypto_openssl.c  crypto_util.c  esl.c  log.c  phyp.c  pseries.c  update.c
test/: Makefile  test_auth2.c  test_esl.c  test_phyp.c  test_pseries.c  test_update.c  test_utils.h
test/data/: PK_sv.h  dbx_1_auth.h  dbx_2_auth.h  dbx_512_a_esl.h  dbx_512_b_esl.h  delete_pk_sbvs_auth.h  kek_esl.h  pk_3k_auth.h  pk_3k_esl.h  pk_4k_auth.h  pk_4k_esl.h  pk_auth.h  sig_too_large.h  sighdr_too_large.h  svc_dbx_by_KEK_auth.h  too_big.h  too_small.h  wipe_by_PK_auth.h  zero_sig.h
test/data/test-data/: KEK_by_PK_auth.h  db_by_KEK_auth.h  dbx_256_a_esl.h  dbx_256_b_esl.h  delete_db_by_kek_sesl_auth.h  delete_pk_sesl_auth.h  one_esl.h  priv_auth.h  svc_db_by_PK_auth.h  two_esl.h  wipe_by_PK_auth.h
